Bug 1337530 - Fix Windows default browser detection. r=rstrong

In addition to fixing the bug, this patch takes the opportunity to remove a
bunch of registry handling code specific to XP and Vista, leaving only the one
officially supported default detection method for all versions above Vista.

MozReview-Commit-ID: 1I77ECJaOFk